--- a/aula2.2.html
+++ b/aula2.2.html
@@ -34,6 +34,20 @@
                     </li>
 
                     <li>
+                        <label for="navegadores">Navegadores:</label>
+                        <input list="navegadores" name="navegadores">
+
+                        <datalist id="navegadores">
+                            <option value="Chrome">
+                            <option value="Firefox">
+                            <option value="Ópera">
+                            <option value="Safari">
+                            <option value="Edge">
+
+                        </datalist>
+                    </li>
+
+                    <li>
                         <input type="submit" value="Enviar">
                     </li>
                    
@@ -42,5 +56,3 @@
         </form>
     </body>
 </html>
-
-<!-- Aula pausada em 1h40 -->
