--- a/aula2.2.html
+++ b/aula2.2.html
@@ -1,58 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Formulários 2</title>
-    </head>
-    <body>
-        <form action="" method="post">
-            <fieldset>
-                <legend>Mais Sobre formulários</legend>
-                <ul>
-                    <li>
-                        <label for="nome"></label>
-                         <input type="text" id="nome" name="nome" placeholder="Digite seu nome completo" autofocus autocomplete="off">
-                         <!-- 
-                            Autofocus é um atributo booleano que server para colocar o cursor no campo de preenchimento do formulário assim que a página for carregada.
-                            Autocomplete serve para ligar e desligar o preenchimento automatico de uma campo, muitoatribuido como "off" quando se trata de dados sensíveis como senha e dados de cartões de crédito.                         
-                        -->
-                    </li>
-                    <li>
-                        <label for="email"></label>
-                         <input type="email" id="email" name="email" placeholder="Ex. contato@empresa.com.br">
-                    </li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Formulários 2</title>
+  </head>
+  <body>
+    <form action="" method="post">
+      <fieldset>
+        <legend>Mais Sobre formulários</legend>
+        <ul>
+          <li>
+            <label for="nome"></label>
+            <input
+              type="text"
+              id="nome"
+              name="nome"
+              placeholder="Digite seu nome completo"
+              autofocus
+              autocomplete="off"
+            />
+            <!-- 
+                Autofocus é um atributo booleano que server para colocar o cursor no campo de preenchimento do formulário assim que a página for carregada.
+                Autocomplete serve para ligar e desligar o preenchimento automatico de uma campo, muitoatribuido como "off" quando se trata de dados sensíveis como senha e dados de cartões de crédito.                         
+            -->
+          </li>
+          <li>
+            <label for="email"></label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Ex. contato@empresa.com.br"
+            />
+          </li>
 
-                    <li>
-                        <label for="telefone"></label>
-                         <input type="tel" id="telefone" name="telefone" placeholder="Ex. (xx) xxxx-xxxx">
-                    </li>
+          <li>
+            <label for="telefone"></label>
+            <input
+              type="tel"
+              id="telefone"
+              name="telefone"
+              placeholder="Ex. (xx) xxxx-xxxx"
+            />
+          </li>
 
-                    <li>
-                        <label for="senha"></label>
-                         <input type="password" id="senha" name="senha">
-                    </li>
+          <li>
+            <label for="senha"></label>
+            <input type="password" id="senha" name="senha" />
+          </li>
 
-                    <li>
-                        <label for="navegadores">Navegadores:</label>
-                        <input list="navegadores" name="navegadores">
+          <li>
+            <label for="navegadores">Navegadores:</label>
+            <input list="navegadores" name="navegadores" />
 
-                        <datalist id="navegadores">
-                            <option value="Chrome">
-                            <option value="Firefox">
-                            <option value="Ópera">
-                            <option value="Safari">
-                            <option value="Edge">
+            <datalist id="navegadores">
+              <option value="Chrome"></option>
+              <option value="Firefox"></option>
+              <option value="Ópera"></option>
+              <option value="Safari"></option>
+              <option value="Edge"></option>
+            </datalist>
+          </li>
 
-                        </datalist>
-                    </li>
-
-                    <li>
-                        <input type="submit" value="Enviar">
-                    </li>
-                   
-                </ul>
-            </fieldset>
-        </form>
-    </body>
+          <li>
+            <input type="submit" value="Enviar" />
+          </li>
+        </ul>
+      </fieldset>
+    </form>
+  </body>
 </html>
